--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 certifi==2025.1.31
 charset-normalizer==3.4.1
 duckdb==1.2.2
+geopy==2.4.1
 idna==3.10
 numpy==2.0.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+rapidfuzz==3.6.1
 requests==2.32.3
 six==1.17.0
 tzdata==2025.2
