--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ requests==2.32.3
 six==1.17.0
 tzdata==2025.2
 urllib3==2.4.0
+pandas>=1.3.0
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+openpyxl>=3.0.0
